# launchservices

./: .gitignore  LICENSE  README.md  csstore.py  empty.csstore  pyproject.toml
launchservices/: __init__.py  __main__.py  csstore.py  lsdatabase.py
objc/: build.sh  test.m
objc/CoreServicesStore.framework/: CoreServicesStore.tbd
objc/CoreServicesStore.framework/Resources/: Info.plist  version.plist
