[project]
name = "launchservices"
description = "interact with LaunchServices"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ios", "macos", "launchservices", "coreservices"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies", "version"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[project.urls]
"Homepage" = "https://github.com/JJTech0130/launchservices"
"Bug Reports" = "https://github.com/JJTech0130/launchservices/issues"

[project.scripts]
launchservices = "launchservices.__main__:cli"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = {attr = "launchservices._version.__version__"}

[tool.setuptools_scm]
version_file = "launchservices/_version.py"

[build-system]
requires = ["setuptools>=43.0.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"
